--- a/Results Summary Component/CSS/result.css
+++ b/Results Summary Component/CSS/result.css
@@ -1,21 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'Hanken Grotesk', sans-serif;
-}
-
-body{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-main{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
 
 .result{
     padding: 40px 52px;
@@ -65,4 +47,10 @@ main{
 
 .score-text-description{
     font-size: 18px;
+}
+
+@media (max-width: 750px){
+    .result{
+        border-radius: 0px 0px 20px 20px;
+    }
 }
