--- a/Huddle Landing Page/style.css
+++ b/Huddle Landing Page/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    transition: 0.5s;
 }
 
 body{
@@ -21,7 +22,7 @@ main{
     display: grid;
     grid-template-columns: 3fr 2fr;
     padding: 25px 50px;
-    gap: 50px;
+    column-gap: 50px;
 }
 
 main img{
@@ -61,6 +62,10 @@ button{
    cursor: pointer;
 }
 
+button:hover{
+    background-color: white;
+}
+
 footer{
     text-align: right;
     padding: 25px 50px;
@@ -90,7 +95,12 @@ footer img{
         margin-bottom: 30px;
     }
 
+    button{
+        width: 250px;
+    }
+
     footer{
         text-align: center;
+        margin-top: 50px;
     }
 }
