--- a/QR Code Component/style.css
+++ b/QR Code Component/style.css
@@ -2,5 +2,43 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Outfit', sans-serif;
+}
+
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #D5E1EF;
+}
+
+main{
+    text-align: center;
+    max-width: 300px;
+    background-color: white;
+    padding: 20px;
+    padding-bottom: 40px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.main-img{
+    max-width: 100%;
+    border-radius: 10px;
+}
+
+.main-title{
+    font-size: 1.3rem;
+    line-height: 1.3;
+    font-weight: 700;
+}
+
+.main-description{
+    line-height: 1.2;
+    font-weight: 400;
+    color: rgb(95, 95, 95);
 }
 
