--- a/NFT Preview Card Component/style.css
+++ b/NFT Preview Card Component/style.css
@@ -18,7 +18,6 @@ body{
 main{
     background-color: #15273F;
     padding: 20px;
-    padding-bottom: 30px;
     border-radius: 10px;
 }
 
@@ -76,7 +75,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .currency{
@@ -118,6 +117,8 @@ main{
     display: flex;
     align-items: center;
     gap: 15px;
+    padding: 20px 0;
+    border-top: 1px solid #1f3656;
 }
 
 .profile-img{
