--- a/Stats Preview Card Component/style.css
+++ b/Stats Preview Card Component/style.css
@@ -37,18 +37,16 @@ main{
 
 .text-container{
     background-color: var(--cardBackground);
-    display: flex;
-    flex-direction: column;
     padding: 70px;
     border-radius: 10px 0px 0px 10px;
 }
 
 .text-title{
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     max-width: 16ch;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .text-title strong{
@@ -59,7 +57,7 @@ main{
     color: var(--mainParagraph);
     line-height: 1.7;
     margin-bottom: 60px;
-    font-size: 13px;
+    font-size: 14px;
     max-width: 40ch;
 }
 
@@ -97,6 +95,39 @@ main{
     opacity: 0.6;
     object-fit: cover;
     object-position: center;
+}
+
+@media (max-width: 600px){
+    body{
+        height: 100%;
+        padding: 20px;
+    }
+
+    main{
+        grid-template-columns: 1fr;
+    }
+
+    .img-container{
+        order: -1;
+        border-radius: 10px 10px 0px 0px;
+    }
+
+    img{
+        border-radius: 10px 10px 0px 0px;
+    }
+
+    .text-container{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        border-radius: 0px 0px 10px 10px;
+        padding: 50px;
+    }
+
+    .stats-container{
+        flex-direction: column;
+    }
 }
 
 
